c_standard/c_syntax.bnf
%token int_const id string
%%

stat_list       :   decl
                |   stat
                |   stat_list decl
                |   stat_list stat
                ;
decl            :   'int' init_decl_list ';'
                ;
init_decl_list  :   init_decl
                |   init_decl_list ',' init_decl
                ;
init_decl       :   id
                |   id '=' assignment_exp
                ;
stat            :   exp_stat
                |   compound_stat
                |   selection_stat
                |   iteration_stat
                |   jump_stat
                |   print_stat
                ;
exp_stat        :   exp ';'
                |   ';'
                ;
compound_stat   :   '{' stat_list '}'
                |   '{' '}'
                ;
selection_stat  :   'if' '(' exp ')' stat
                |   'if' '(' exp ')' stat 'else' stat
                ;
iteration_stat  :   'while' '(' exp ')' stat
                |   'do' stat 'while' '(' exp ')' ';'
                |   for '(' exp ';' exp ';' exp ')' stat
                |   for '(' exp ';' exp ';'     ')' stat
                |   for '(' exp ';'     ';' exp ')' stat
                |   for '(' exp ';'     ';'     ')' stat
                |   for '('     ';' exp ';' exp ')' stat
                |   for '('     ';' exp ';'     ')' stat
                |   for '('     ';'     ';' exp ')' stat
                |   for '('     ';'     ';'     ')' stat
                ;
jump_stat       :   'break' ';'
                ;
print_stat      :   'printf' '(' string ')' ';'
                |   'printf' '(' string ',' argument_list ')' ';'
                ;
argument_list   :   assignment_exp
                |   argument_list  ',' assignment_exp
                ;
exp             :   assignment_exp
                |   assignment_exp ',' exp
                ;
assignment_exp  :   equality_exp
                |   id '=' assignment_exp
                ;
equality_exp    :   relational_exp
                |   equality_exp '==' relational_exp
                |   equality_exp '!=' relational_exp
                ;
relational_exp  :   additive_exp
                |   relational_exp '<' additive_exp
                |   relational_exp '>' additive_exp
                |   relational_exp '<=' additive_exp
                |   relational_exp '>=' additive_exp
                ;
additive_exp    :   mult_exp
                |   additive_exp '+' mult_exp
                |   additive_exp '-' mult_exp
                ;
mult_exp        :   unary_exp
                |   mult_exp '*' unary_exp
                |   mult_exp '/' unary_exp
                ;
unary_exp       :   postfix_exp
                |   '+' unary_exp
                |   '-' unary_exp
                ;
postfix_exp     :   primary_exp
                |   postfix_exp '--'
                |   postfix_exp '++;
                ;
primary_exp     :   id
                |   int_const
                ;
